<resources>
    <!--   A   -->
    <string name="ambiente">Ambiente</string>
    <string name="ambientes">Ambientes</string>
    <string name="adm">Administração</string>
    <string name="acesso">Acesso</string>
    <string name="app_name">LED STOCK</string>
    <string name="acessocompleto">Acesso Completo</string>
    <string name="aplicardesconto">Aplicar Desconto</string>

    <!--   B   -->
    <string name="ButtonLogin">Login</string>
    <string name="bairro">Bairro</string>
    <string name="botao_insert">Cadastrar</string>

    <!--   C   -->
    <string name="cliente">Cliente</string>
    <string name="clientes">Clientes</string>
    <string name="comp">Complemento</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="contato">Contato</string>
    <string name="cnpj_cpf">CNPJ/CPF</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancel_pedido">Cancelar Pedido</string>
    <string name="contactCreationFailure">Problemas ao Criar o Contato !</string>
    <string name="conta_atual">Conta Atual:</string>
    <string name="conta_ideal">Conta Ideal:</string>

    <!--   D   -->
    <string name="descricao">Descrição</string>
    <string name="descricaotwodot">Descrição:</string>
    <string name="delete">Excluir</string>
    <string name="descount">Desconto em %</string>
    <string name="descounttwodot">Desconto:</string>
    <string name="desconto_leds">Desconto dos Leds:</string>
    <string name="desconto_mao">Desconto Mão de Obra:</string>
    <string name="desconto_valor_total">Desconto sobre valor total:</string>

    <!--   E   -->
    <string name="estudo">Estudo</string>
    <string name="estudos">Estudos</string>
    <string name="email">E-mail</string>
    <string name="endereco">Endereço</string>
    <string name="edit">Editar</string>
    <string name="email2">E-mail Secundário</string>
    <string name="enviarorcamento">Enviar Orçamento</string>
    <string name="enviarestudo">Enviar Estudo</string>
    <string name="excluir">Excluir</string>
    <string name="economia">Economia:</string>
    <string name="emailcadastrado">ledstockagenda@gmail.com</string>

    <!--   H   -->
    <string name="horasacesas">Horas Acesas</string>
    <string name="horas">Horas Acesas:</string>

    <!--   I   -->
    <string name="investimento">Investimento:</string>
    <string name="itensorcamentos">Itens nos Orçamentos:</string>

    <!--   L   -->
    <string name="luximetro">Luximetro</string>
    <string name="lampada">Lâmpada</string>
    <string name="lampadas">Lâmpadas</string>
    <string name="led">LED</string>
    <string name="leds">LEDs</string>
    <string name="listaleds">Lista de Leds</string>
    <string name="listahandson">Lista de Mão de Obras</string>

    <!--   M   -->
    <string name="Menu_Nome">LED STOCK</string>
    <string name="msg_deletar">Deseja Excluir o Cliente ?</string>
    <string name="maodeobra">Mão de Obra</string>
    <string name="nomeestudo">Nome do Estudo</string>
    <string name="mdo">Mão de Obra:</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>

    <!--   N   -->
    <string name="nome">Nome</string>
    <string name="num">Numero</string>
    <string name="nav_drawer_username">LED STOCK</string>
    <string name="numpendente">Carregando Numero..</string>

    <!--   O   -->
    <string name="orcamento">Orçamento</string>
    <string name="orcamentos">Orçamentos</string>
    <string name="ok">OK</string>

    <!--   P   -->
    <string name="password">Senha</string>
    <string name="potencia">Potência</string>
    <string name="preco">Preço KWh</string>
    <string name="pedido">Pedido</string>
    <string name="pedidos">Pedidos</string>
    <string name="pedido_pendente">Pedido Pendente ..</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="psm">Pedido Sem Mão de Obra</string>
    <string name="pcm">Pedido Com Mão de Obra</string>
    <string name="potencia_atual">Potência Atual:</string>
    <string name="potencia_led">Potência Led:</string>

    <!--   Q   -->
    <string name="quantidade">Quantidade</string>
    <string name="quantidadetwodot">Quantidade:</string>
    <string name="qnt">Qnt:</string>
    <string name="qnt_leds">Quantidade de Leds:</string>
    <string name="qnt_mao">Quantidade de Mão de Obra:</string>

    <!--   R   -->
    <string name="retorno">Retorno Mês:</string>
    <string name="relatorio_orcamento">Relatório Orçamento</string>

    <!--   S   -->
    <string name="salvar">Salvar</string>
    <string name="solucao_led">Solução LED</string>
    <string name="senha">Senha</string>
    <string name="sync">Estado de Sincronismo</string>

    <!--   T   -->
    <string name="teste">Teste</string>
    <string name="tel">Telefone</string>
    <string name="tel2">Telefone 2</string>

    <!--   U   -->
    <string name="usuario">Usuário</string>
    <string name="usuarios">Usuários</string>
    <string name="User">Usuário</string>
    <string name="uf">UF</string>

    <!--   V   -->
    <string name="valor">Valor</string>
    <string name="valor_revenda">Valor Revenda</string>
    <string name="valor_leds">Valor dos Leds:</string>
    <string name="valor_mao">Valor Mão de Obra:</string>
    <string name="valor_leds_desconto">Valor dos Leds c/ Desc:</string>
    <string name="valor_mao_desconto">Valor Mão de Obra c/ Desc:</string>
    <string name="valor_total">Valor Total:</string>
    <string name="valor_total_com_desconto">Valor Total c/ Desc:</string>

    <!--   W   -->
    <string name="w">W</string>

    <!--   Z   -->
    <string name="zero">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="UF_array">
        <item>  </item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>

    </string-array>
</resources>
