<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/nome"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/cnpj_cpf"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tcnpj_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cep"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bairro"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/SpinnerUF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tTel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel2"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tTel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Cancelar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/Salvar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:text="@string/salvar" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


