<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/cardview_shadow_start_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/img"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:contentDescription="@string/solucao_led"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/Menu_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu_Nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/emailcadastrado" />

</LinearLayout>