<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="6dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:dividerPadding="20dp">

        <RadioButton
            android:id="@+id/radio_pcm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcm" />

        <RadioButton
            android:id="@+id/radio_psm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psm" />

        <RadioButton
            android:id="@+id/radio_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_pedido" />
    </RadioGroup>

</LinearLayout>